<resources>
    <string name="app_name">Rise Zone Fitness</string>
    <string name="welcome_glad_to_see_you">Welcome ! Glad to see you !</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome</string>
    <string name="all">All</string>
    <string name="memon">Subscriber</string>
    <string name="memoff">Not Subscriber</string>
    <string name="welcome_sentence">Welcome Back Sir !!</string>
    <string name="settings">Settings</string>
    <string name="members">Members</string>
    <string name="home">Home</string>
    <string name="members_list">Members List</string>
    <string name="send_message">Send Message</string>
    <string name="non_paid">Non Paid</string>
    <string name="in_gym_now">In Gym Now</string>
    <string name="info">Age : 25 Gender : Male</string>
    <string name="profile">profile</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_confirm_text">Are you sure you want to log out ?</string>
    <string name="log_out_cancel">Cancel</string>
    <string name="welcome_hero">WELCOME HERO</string>
    <string name="profile_image">Profile Image</string>
    <string name="confirm">Confirm</string>
    <string name="member_password">Member Password</string>
    <string name="member_username">Member Username</string>
    <string name="email">Email</string>
    <string name="phone">Number</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="cin">CIN</string>
    <string name="member_added_successfully">Member added successfully!</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="back_icon">Back Icon</string>
    <string name="edit_icon">Edit Icon</string>
    <string name="risezonegym">RiseZoneGym</string>
    <string name="status">Status</string>
    <string name="registration_date">Registration</string>
    <string name="subscription_status">Subscription</string>
    <string name="contact_infos">Contact Infos</string>
    <string name="subscribed">Subscribed</string>
    <string name="confirm_sent">Are you sure you want to apply these updates ?</string>
    <string name="delete_sent">Are you sure you want to delete this member?</string>
    <string name="delete_title">Delete Member</string>
    <string name="not_subscribed">Not Subscribed</string>
    <string name="change">Change</string>
    <string name="change_sent">Are you sure you want to change the subscription status?</string>
    <string name="thanks_sent">Thanks for your discipline HERO, Enjoy !!</string>
    <string name="let_s_go">Cancel</string>
    <string name="week_streak">Week Streak</string>
    <string name="last_session">Last Session</string>
    <string name="login_sent">Let\'s Go</string>
    <string name="entries_0">Entries: 0</string>
    <string name="exits_0">Exits: 0</string>
    <string name="date">Date</string>
    <string name="members_in_gym_0">Members in Gym: 0</string>
    <string name="non_subscribed_0">Non-Subscribed: 0</string>
    <string name="total_members_0">Total Members: 0</string>
    <string name="entries">Entries</string>
    <string name="exits">Exits</string>
    <string name="empty">Empty</string>
    <string name="reports">reports\n</string>
    <string name="recent_activity">Recent Activity</string>
</resources>