<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <ImageView
        android:id="@+id/dialogIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/confirm"
        android:src="@drawable/ic_conf"
        android:layout_gravity="center"/>


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginBottom="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_sent"
        android:textColor="@color/second_text_color"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/log_out_cancel"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/second_text_color"
            android:padding="10dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E0E0E0" />

        <TextView
            android:id="@+id/btnDeleteConfirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/red"
            android:padding="10dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>