<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <ImageView
        android:id="@+id/dialogIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/confirm"
        android:src="@drawable/ic_conf"
        android:layout_gravity="center"/>


    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_sent"
        android:textColor="@color/second_text_color"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out_cancel"
            android:padding="10dp"
            android:textColor="@color/second_text_color"
            android:layout_marginEnd="50dp"
            android:background="?android:attr/selectableItemBackground"/>


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E0E0E0"/>


        <TextView
            android:id="@+id/btnChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textColor="@color/primary_color"
            android:layout_marginStart="50dp"
            android:padding="10dp"
            android:background="?android:attr/selectableItemBackground"/>
    </LinearLayout>
</LinearLayout>