<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/TitleTextStyle"
            android:padding="8dp" />

        <TextView
            android:id="@+id/entriesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entries"
            style="@style/TextStyle"
            android:padding="4dp" />

        <TextView
            android:id="@+id/exitsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exits"
            android:padding="4dp"
            style="@style/TextStyle"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
