<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/log_out"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tvMessage"
        android:text="@string/log_out_confirm_text"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/tvNo"
            android:text="@string/log_out_cancel"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E0E0E0" />

        <TextView
            android:id="@+id/tvYes"
            android:text="@string/log_out"
            android:textSize="16sp"
            android:textColor="@color/red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>
