<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/general"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:elevation="4dp">

            <LinearLayout
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                android:src="@drawable/ic_theme"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/theme"
                    />

                <TextView
                    android:text="@string/theme"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:elevation="4dp">

            <LinearLayout
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_language"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/language" />

                <TextView
                    android:text="@string/language"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:text="@string/account"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp">

            <LinearLayout
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_logout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/log_out" />

                <TextView
                    android:text="@string/log_out"
                    android:textSize="16sp"
                    android:textColor="#FF0000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
