<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="32dp">


        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="170dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_icon"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_person"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/profile_image" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/pers_ic"
                    app:startIconTint="@color/primary_color"
                    app:endIconTint="@color/primary_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:layout_marginTop="16dp"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/date_ic"
                    app:startIconTint="@color/primary_color"
                    app:endIconTint="@color/primary_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ageInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="2"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:layout_marginTop="16dp"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/pers_ic"
                    app:startIconTint="@color/primary_color"
                    app:endIconTint="@color/primary_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/genderInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:layout_marginTop="16dp"
                    app:prefixText="+212"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/phone_ic"
                    app:startIconTint="@color/primary_color"
                    app:endIconTint="@color/primary_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="9"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginTop="16dp"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/primary_color"
                    app:endIconTint="@color/primary_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cinSignUpText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cin"
                    android:layout_marginTop="16dp"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/id_card_ic"
                    app:startIconTint="@color/primary_color"
                    app:endIconTint="@color/primary_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signUpCIN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="8"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/member_username"
                    android:layout_marginTop="16dp"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/pers_ic"
                    app:startIconTint="@color/primary_color"
                    app:endIconTint="@color/primary_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/member_password"
                    android:layout_marginTop="16dp"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_pw"
                    app:startIconTint="@color/primary_color"
                    app:endIconTint="@color/primary_color"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/buttonStyle"
                    android:padding="12dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/confirm" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
