<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TitleTextStyle"
            android:gravity="center"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="20dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/totalMembersCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/totalMembersTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_members_0"
                style="@style/TextStyle"
                android:gravity="center"
                android:padding="20dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/membersInGymCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/totalMembersCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/membersInGymTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/members_in_gym_0"
                style="@style/TextStyle"
                android:gravity="center"
                android:padding="20dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/nonSubscribedCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/membersInGymCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/nonSubscribedTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_subscribed_0"
                style="@style/TextStyle"
                android:gravity="center"
                android:padding="20dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attendanceLogsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="45dp"
            android:contentDescription="@string/empty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nonSubscribedCard"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
